FHIR Messaging simulation endpoint